@@ -1,0 +1,15 @@
+#if Implementation
+namespace Mono.Microsoft.Windows.Themes {
+#else
+namespace Microsoft.Windows.Themes {
+#endif
+	public enum ScrollGlyph {
+		None,
+		LeftArrow,
+		RightArrow,
+		UpArrow,
+		DownArrow,
+		VerticalGripper,
+		HorizontalGripper
+	}
+}
