@@ -1,0 +1,11 @@
+#if Implementation
+namespace Mono.Microsoft.Windows.Themes {
+#else
+namespace Microsoft.Windows.Themes {
+#endif
+	public enum ThemeColor {
+		NormalColor,
+		Homestead,
+		Metallic
+	}
+}
