@@ -59,6 +59,8 @@
     <Compile Include="..\PresentationFramework\Mono.WindowsPresentationFoundation\Utility.cs">
       <Link>Mono.WindowsPresentationFoundation\Utility.cs</Link>
     </Compile>
+    <Compile Include="Microsoft.Windows.Themes\ThemeColor.cs" />
+    <Compile Include="Microsoft.Windows.Themes\ScrollGlyph.cs" />
     <Compile Include="Microsoft.Windows.Themes\PlatformCulture.cs" />
     <Compile Include="Microsoft.Windows.Themes\ProgressBarBrushConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
