@@ -1,5 +1,9 @@
 2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* ScrolGllyph.cs, ThemeColor.cs: Added.
+
+2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* PlatformCulture.cs: Added.
 
 2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>
